src/app/components/commit-section/make-a-commit/make-a-commit.component.scss
@forward "commit-section";

:host {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;

  p-splitter {
    flex: 1;
    min-height: 0;
  }

  ::ng-deep {
    .max-size-bottom .p-splitterpanel:last-child {
      max-height: 400px;
    }

    .p-splitterpanel.p-splitterpanel-nested.ng-star-inserted {
      min-height: 210px;
    }

    // force table to not exceed container
    p-table .p-datatable-table {
      table-layout: fixed;
      width: 100%;
    }

    p-table.show-button-on-row-hover {
      .file-row-content {
        position: relative;
        width: 100%;
        display: flex;
        align-items: center;
        flex: 1;
        padding: 2px;

        .stick-right-button {
          opacity: 0;
          position: absolute;
          right: 4px;
          top: 50%;
          transform: translateY(-50%);
          pointer-events: none;
          transition: opacity 0.08s ease-in-out;
        }

        &:hover .stick-right-button {
          opacity: 1;
          pointer-events: auto;
        }
      }
    }
  }
}

.white {
  color: var(--babedouGrayPlus);
}

.conflicted-section {
  display: flex;
  flex-direction: column;
  flex: 0 0 auto;
  min-height: 120px;
  max-height: 30%;
  border-bottom: 1px solid var(--p-content-border-color);
}

.conflict-header {
  color: var(--warning-text-color);
}

